# resume-builder

./: .gitignore  CMakeLists.txt  README.md
cmake/: bin2c.cmake  embed_resource.cmake  platform.cmake
resources/fonts/: build_font_subset.py
scripts/: build_android.sh  build_macos.sh  build_windows.bat
src/: app.cpp  app.h  main.cpp
src/data/: autosave.cpp  autosave.h  json_io.cpp  json_io.h  resume_model.cpp  resume_model.h
src/export/: pdf_export.cpp  pdf_export.h
src/platform/: platform.h  platform_android.cpp  platform_desktop.cpp  platform_ios.cpp
src/resources/: font_data.h
src/template/: template_engine.cpp  template_engine.h  tpl_classic.cpp  tpl_creative.cpp  tpl_minimal.cpp  tpl_modern.cpp
src/ui/: ui_editor.cpp  ui_editor.h  ui_main.cpp  ui_main.h  ui_preview.cpp  ui_preview.h  ui_theme.cpp  ui_theme.h
src/ui/modules/: mod_certs.cpp  mod_education.cpp  mod_personal.cpp  mod_projects.cpp  mod_skills.cpp  mod_work.cpp
